Consider this OK for public page

--- a/schedule_view/index_template.html
+++ b/schedule_view/index_template.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Kalman star watch</title>
-    <link href="/aspect/aspect.css" rel="stylesheet" type="text/css"
+    <link href="mta/ASPECT/aspect.css" rel="stylesheet" type="text/css"
         media="all" />
     <style type="text/css">
         table {
