Fix index title

--- a/schedule_view/index_template.html
+++ b/schedule_view/index_template.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Kalman star watch</title>
+    <title>Schedules</title>
     <link href="mta/ASPECT/aspect.css" rel="stylesheet" type="text/css"
         media="all" />
     <style type="text/css">
